<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NativeApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="thumbnail">thumbnail</string>
    <string name="news">News</string>
    <string name="feed">Feed</string>
    <string name="flow">Flow</string>
    <string name="board">Board</string>
    
    <string name="newsTitle">News Title</string>
    <string name="feeddesc">Inmobi Tech</string>
    <string name="title_activity_native_welcome">NativeWelcome</string>
    <string name="title_activity_native_menu">NativeDemoApp</string>
    <string name="title_activity_native_board">NativeNewsBoard</string>
    <string name="title_activity_native_cover">NativeCoverFlow</string>
    <string name="title_activity_native_feed">NativeInstagramFeeds</string>
    <string name="title_activity_native_news">NativeNewsFeeds</string>

</resources>
