<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="430dp" 
    android:orientation="vertical">
 

        <TextView
        android:id="@+id/sponsored"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:text="Sponsored"
        android:textSize="13sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/tertiary_text_dark" />
    
     <ImageView
        android:id="@+id/inmobiLogo"
       	android:layout_width="60dp"
        android:layout_height="40dp"
        android:contentDescription="@string/thumbnail"
        android:src="@drawable/inmobi_thumbnail" />
    
    <TextView
        android:id="@+id/txtdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/feeddesc" 
        />
     
     
     
    <ImageView
        android:id="@+id/imgNewsIcon"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_launcher" />


 
    <TextView
        android:id="@+id/txtNewsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/newsTitle" />

    
    
</LinearLayout>