<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:id="@+id/menu1"
    
         >
			<ImageView
    		android:id="@+id/imgNative1"
    		android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
        	android:layout_centerInParent="true"
            android:src="@drawable/inmobilogo"/>
        <TextView
            android:id="@+id/imgNativeMenu1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imgNative1"
            android:text="@string/news"
            android:textSize="20sp" 
            />

    </RelativeLayout>
<View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin"
   		android:id="@+id/menu2"
        >
        <ImageView
    		android:id="@+id/imgNative2"
    		android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/inmobilogo"/>
         <TextView
        android:id="@+id/imgNativeMenu2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imgNative2"
         android:textSize="20sp"
         android:text="@string/feed"
         />
    </RelativeLayout>
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:id="@+id/menu3"
    >
         <ImageView
    		android:id="@+id/imgNative3"
    		android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/inmobilogo"/>
         <TextView
        android:id="@+id/imgNativeMenu3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/flow"
        android:textSize="20sp"
        android:layout_below="@+id/imgNative3"
       android:layout_alignParentRight="true"
       />
    </RelativeLayout>
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
   		android:paddingLeft="@dimen/activity_horizontal_margin"
  		android:paddingRight="@dimen/activity_horizontal_margin"
   		android:id="@+id/menu4"
         >
         <ImageView
    		android:id="@+id/imgNative4"
    		android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/inmobilogo"/>
         <TextView
        android:id="@+id/imgNativeMenu4"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/board"
         android:textSize="20sp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imgNative4"
         />
    </RelativeLayout>
<View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
</LinearLayout>